# daw

./: .gitignore  Cargo.toml  example.c  j  tcc_build.sh
element_macro/: Cargo.toml
element_macro/src/: lib.rs
ott/: OTT.vst3
src/: event_subscriptions.rs  global.rs  main.rs  midi.rs  piano_roll.rs  plugins.rs  project.rs  script.rs  selection.rs  shortcuts.rs  top_bar.rs  track.rs  utils.rs
src/audio/: audio_processor.rs  device.rs  mod.rs
src/plugin_host/: juce_wrapper.cpp
src/shaders/: main_frag.frag  main_vert.vert  texture_frag.frag
src/ui/: command_palette.rs  element.rs  element_creation_queue.rs  element_macro.rs  frame_buf.rs  gl.rs  input.rs  macros.rs  misc_elements.rs  mod.rs  piano_roll.rs  reactive.rs  reactive_list.rs  scroll_window.rs  style.rs  text.rs  top_bar.rs
