[package]
name = "daw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
glow = "0.13.0"
midi-control = "0.2.2"
midir = "0.9.1"
rusttype = "0.9.3"
sdl2 = "0.36.0"
serde = "1.0.193"
tokio = "1.35.1"
vst = { git="https://github.com/jaspwr/vst-rs/" } # needs to make Vst trait public
# vst3-sys = { git = "https://github.com/RustAudio/vst3-sys" }
